<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_form">

    <include layout="@layout/form_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--个人资料-->

        <LinearLayout style="@style/base_form">


            <LinearLayout
                android:id="@+id/ll_menu_1"
                style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:layout_weight="1"
                    android:text="@string/myinfo_title1" />

                <ImageView
                    android:id="@+id/img_head"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginEnd="@dimen/dp13"
                    android:src="@mipmap/icon_head" />

                <ImageView style="@style/item_right" />

            </LinearLayout>


            <View style="@style/view_line" />


            <!--昵称-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title2_1" />

                <EditText
                    android:id="@+id/et_nickName"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--身份证号-->
            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title3" />

                <EditText
                    android:id="@+id/et_cardNo"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title4" />

                <TextView
                    style="@style/my_info_edit1"
                    android:hint="立即绑定" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title5" />

                <TextView
                    style="@style/my_info_edit1"
                    android:hint="立即绑定" />

                <ImageView style="@style/item_right" />

            </LinearLayout>


            <View style="@style/view_line" />

            <!--手机号码-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title7" />

                <TextView
                    android:id="@+id/et_mobile"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--地址-->
            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title8" />

                <EditText
                    android:id="@+id/et_address"
                    style="@style/my_info_edit" />

            </LinearLayout>


            <View style="@style/view_line" />

            <!--修改密码-->
            <LinearLayout
                android:id="@+id/ll_menu_11"
                style="@style/my_info_item"
                android:layout_marginTop="@dimen/dp20">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title11" />

                <TextView
                    style="@style/my_info_edit1"
                    android:text="******" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--修改密码-->
            <LinearLayout
                android:id="@+id/ll_menu_12"
                style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title12" />

                <TextView
                    android:id="@+id/tv_pay_pwd"
                    style="@style/my_info_edit1"
                    android:text="******" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View
                style="@style/view_line"
                android:layout_marginBottom="@dimen/dp50" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>