<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_form">

    <include layout="@layout/form_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--个人资料-->

        <LinearLayout style="@style/base_form">


            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/update_pwd_title"
                    android:text="@string/title_phone" />

                <EditText
                    android:id="@+id/et_mobile"
                    style="@style/base_edit"
                    android:inputType="phone" />


            </LinearLayout>

            <View style="@style/view_line" />

            <!--验证码-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/update_pwd_title"
                    android:text="@string/title_code" />

                <EditText
                    android:id="@+id/et_mobile_code"
                    style="@style/base_edit"
                    android:inputType="number" />

                <Button
                    style="@style/btn_get_code"
                    android:layout_height="@dimen/dp35"
                    android:layout_marginStart="@dimen/dp13" />


            </LinearLayout>

            <View style="@style/view_line" />

            <!--验证码-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/update_pwd_title"
                    android:text="@string/title_pwd_new" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/base_edit"
                    android:inputType="textPassword" />


            </LinearLayout>

            <View style="@style/view_line" />

            <!--验证码-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/update_pwd_title"
                    android:text="@string/title_pwd_new_ok" />

                <EditText
                    android:id="@+id/et_password1"
                    style="@style/base_edit"
                    android:inputType="textPassword" />


            </LinearLayout>

            <Button
                android:id="@id/btn_ok"
                style="@style/btn_ok"
                android:layout_marginEnd="@dimen/dp13"
                android:layout_marginStart="@dimen/dp13"
                android:layout_marginTop="@dimen/dp30" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>