<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_login"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp93"
            android:layout_height="@dimen/dp93"
            android:src="@mipmap/ic_launcher" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp290"
        android:background="@mipmap/icon_bg_login_edit"
        android:orientation="vertical">


        <LinearLayout


            style="@style/base_edit_layout"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp30">

            <ImageView
                style="@style/edit_icon"
                android:src="@mipmap/icon_phone" />

            <EditText
                android:id="@+id/et_mobile"
                style="@style/base_edit"
                android:hint="@string/hint_register_phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            style="@style/base_edit_layout"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp13">

            <ImageView
                style="@style/edit_icon"
                android:src="@mipmap/icon_phone" />

            <EditText
                android:id="@+id/et_verification_code"
                style="@style/base_edit"
                android:hint="@string/hint_register_code"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_send_code"
                style="@style/btn_get_code" />

        </LinearLayout>

        <LinearLayout
            style="@style/base_edit_layout"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp13">

            <ImageView
                style="@style/edit_icon"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/base_edit"
                android:hint="@string/hint_register_password"
                android:inputType="textPassword" />


        </LinearLayout>

        <LinearLayout
            style="@style/base_edit_layout"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp13">

            <ImageView
                style="@style/edit_icon"
                android:src="@mipmap/icon_recommend" />

            <EditText
                android:id="@+id/et_recommend"
                style="@style/base_edit"
                android:hint="@string/hint_register_recommend" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp13"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_is_room"
                style="@style/checkbox_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35"
                android:layout_marginLeft="@dimen/dp13"
                android:layout_marginStart="@dimen/dp30"
                android:text=" 我已认真阅读  "
                android:textColor="#666666"
                android:textSize="@dimen/sp17" />

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp17" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_ok"
            android:layout_marginBottom="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp13"
            android:text="@string/register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="有账号？"
            android:textColor="#666666"
            android:textSize="@dimen/sp22" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/btn_login_underline"
            android:textColor="@color/btn_normal"
            android:textSize="@dimen/sp22" />

    </LinearLayout>


</RelativeLayout>